// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Versioning should get lowest target versions 1`] = `
[
  {
    "parsedVersion": 7,
    "target": "node",
    "version": "7",
  },
  {
    "parsedVersion": 50.5,
    "target": "firefox",
    "version": "50.5",
  },
  {
    "parsedVersion": 20,
    "target": "chrome",
    "version": "20",
  },
]
`;

exports[`Versioning should support multi env config in browserslist package.json 1`] = `
[
  {
    "parsedVersion": 27,
    "target": "samsung",
    "version": "27",
  },
  {
    "parsedVersion": 26.4,
    "target": "safari",
    "version": "26.4",
  },
  {
    "parsedVersion": 132,
    "target": "opera",
    "version": "132",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 18.5,
    "target": "ios_saf",
    "version": "18.5-18.7",
  },
  {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  {
    "parsedVersion": 140,
    "target": "firefox",
    "version": "140",
  },
  {
    "parsedVersion": 151,
    "target": "edge",
    "version": "151",
  },
  {
    "parsedVersion": 145,
    "target": "chrome",
    "version": "145",
  },
  {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  {
    "parsedVersion": 13.52,
    "target": "baidu",
    "version": "13.52",
  },
  {
    "parsedVersion": 154,
    "target": "android",
    "version": "154",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 156,
    "target": "and_ff",
    "version": "156",
  },
  {
    "parsedVersion": 154,
    "target": "and_chr",
    "version": "154",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 1`] = `
[
  {
    "parsedVersion": 70,
    "target": "chrome",
    "version": "70",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 2`] = `
[
  {
    "parsedVersion": 29,
    "target": "samsung",
    "version": "29",
  },
  {
    "parsedVersion": 26.5,
    "target": "safari",
    "version": "26.5",
  },
  {
    "parsedVersion": 134,
    "target": "opera",
    "version": "134",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 18.5,
    "target": "ios_saf",
    "version": "18.5-18.7",
  },
  {
    "parsedVersion": 140,
    "target": "firefox",
    "version": "140",
  },
  {
    "parsedVersion": 150,
    "target": "edge",
    "version": "150",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 154,
    "target": "android",
    "version": "154",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 156,
    "target": "and_ff",
    "version": "156",
  },
  {
    "parsedVersion": 154,
    "target": "and_chr",
    "version": "154",
  },
]
`;

exports[`Versioning should support single array config in browserslist package.json 1`] = `
[
  {
    "parsedVersion": 27,
    "target": "samsung",
    "version": "27",
  },
  {
    "parsedVersion": 26.4,
    "target": "safari",
    "version": "26.4",
  },
  {
    "parsedVersion": 132,
    "target": "opera",
    "version": "132",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 18.5,
    "target": "ios_saf",
    "version": "18.5-18.7",
  },
  {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  {
    "parsedVersion": 140,
    "target": "firefox",
    "version": "140",
  },
  {
    "parsedVersion": 151,
    "target": "edge",
    "version": "151",
  },
  {
    "parsedVersion": 145,
    "target": "chrome",
    "version": "145",
  },
  {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  {
    "parsedVersion": 13.52,
    "target": "baidu",
    "version": "13.52",
  },
  {
    "parsedVersion": 154,
    "target": "android",
    "version": "154",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 156,
    "target": "and_ff",
    "version": "156",
  },
  {
    "parsedVersion": 154,
    "target": "and_chr",
    "version": "154",
  },
]
`;

exports[`Versioning should support string config in rule option 1`] = `
[
  {
    "parsedVersion": 29,
    "target": "samsung",
    "version": "29",
  },
  {
    "parsedVersion": 26.5,
    "target": "safari",
    "version": "26.5",
  },
  {
    "parsedVersion": 134,
    "target": "opera",
    "version": "134",
  },
  {
    "parsedVersion": 80,
    "target": "op_mob",
    "version": "80",
  },
  {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  {
    "parsedVersion": 18.5,
    "target": "ios_saf",
    "version": "18.5-18.7",
  },
  {
    "parsedVersion": 140,
    "target": "firefox",
    "version": "140",
  },
  {
    "parsedVersion": 150,
    "target": "edge",
    "version": "150",
  },
  {
    "parsedVersion": 109,
    "target": "chrome",
    "version": "109",
  },
  {
    "parsedVersion": 154,
    "target": "android",
    "version": "154",
  },
  {
    "parsedVersion": 15.5,
    "target": "and_uc",
    "version": "15.5",
  },
  {
    "parsedVersion": 14.9,
    "target": "and_qq",
    "version": "14.9",
  },
  {
    "parsedVersion": 156,
    "target": "and_ff",
    "version": "156",
  },
  {
    "parsedVersion": 154,
    "target": "and_chr",
    "version": "154",
  },
]
`;
